--- a/quiz on appliances energy prediction dataset.ipynb
+++ b/quiz on appliances energy prediction dataset.ipynb
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1615,10 +1615,10 @@
     "ridge = Ridge(alpha = 0.4)\n",
     "ridge.fit(x_train, y_train)\n",
     "pred_ridge = ridge.predict(x_test)\n",
-    "ridge_rsme = print('RMSE of ridge regression: ', round(np.sqrt(metrics.mean_squared_error(y_test, pred_ridge)), 3))\n",
-    "linear_rsme = print('RMSE of linear regression: ', round(np.sqrt(metrics.mean_squared_error(y_test, pred)), 3))\n",
+    "ridge_rmse = print('RMSE of ridge regression: ', round(np.sqrt(metrics.mean_squared_error(y_test, pred_ridge)), 3))\n",
+    "linear_rmse = print('RMSE of linear regression: ', round(np.sqrt(metrics.mean_squared_error(y_test, pred)), 3))\n",
     "\n",
-    "if ridge_rsme == linear_rsme:\n",
+    "if ridge_rmse == linear_rmse:\n",
     "    print('no change in RMSE evaluated on the test set')\n",
     "else:\n",
     "    print('change in RMSE evaluated on the test set')"
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
    ],
    "source": [
     "# Question 20\n",
-    "# what is the new RSME with the Lasso Regression (in 3 decimal places)?\n",
+    "# what is the new RMSE with the Lasso Regression (in 3 decimal places)?\n",
     "print('RMSE of Lasso Regression: ', round(np.sqrt(metrics.mean_squared_error(y_test, pred_lasso)), 3))"
    ]
   },
